# FinTech-Agentic-App

./: .env.example  .gitignore  FinTech Agentic App.md  HOWTO.md  README.md  architecture.md  bun.lockb  design.md  integration.md  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .ruff.toml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  schemas.py
backend/app/api/routers/: __init__.py  advisory.py  auth_router.py  branches.py  cases.py  chat.py  fraud.py  interactions.py  loans.py
backend/app/application/: __init__.py  orchestrator.py
backend/app/application/agents/: __init__.py  advisory.py  base.py  branch.py  fraud.py  loan.py  sentiment.py
backend/app/core/: __init__.py  config.py  container.py  ids.py  logging.py
backend/app/domain/: __init__.py
backend/app/domain/models/: __init__.py  advisory.py  audit.py  branch.py  case.py  customer.py  fraud.py  interaction.py  loan.py  transaction.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/ai/: __init__.py  capella.py  interfaces.py  stub.py
backend/app/infrastructure/persistence/: __init__.py  interfaces.py
backend/app/infrastructure/persistence/couchbase/: __init__.py  client.py  repositories.py
backend/app/infrastructure/persistence/memory/: __init__.py  repositories.py  store.py
backend/app/scripts/: seed_data.py
backend/tests/: conftest.py
backend/tests/integration/: test_agent_audit_trail.py  test_api_advisory.py  test_api_fraud.py  test_api_loans.py  test_chat_e2e.py  test_chat_pipeline.py  test_chat_router.py
backend/tests/unit/: test_chat_classifier.py  test_chat_handlers.py  test_domain_models.py  test_in_memory_adapter.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
scripts/: dev.sh  lint.sh  seed.sh  setup.sh  test.sh
src/: routeTree.gen.ts  router.tsx  styles.css
src/components/: AppShell.tsx  ConnectionBadge.tsx  ThemeToggle.tsx  UserMenu.tsx  m3.tsx
src/lib/: api.ts  mockData.ts
(+25 files in other folders)
